--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div class="navbar-toggler" type="button">
             <i class="fa fa-bars"></i>
         </div>
+        <div class="brand">
+            <p>BASICS</p>
+        </div>
         <nav>
             <div class="navbar-close">
                 <i class="fa fa-light fa-xmark"></i>
@@ -34,9 +37,9 @@
             <div class="menucontact">
                 <p>Do get in touch to say hello, set up a meeting, or chat about branding things.</p>
                 <div class="details">
-                    <a href="tel:+919167884920">+91 91678 84920</a>
+                    <a href="tel:+919167884920"><i class="fa-solid fa-phone"></i> +91 91678 84920</a>
                     <br>
-                    <a href="mailto:shailendra.shyamsukha@gmail.com">shailendra.shyamsukha@gmail.com </a>
+                    <a href="mailto:shailendra.shyamsukha@gmail.com"><i class="fa-solid fa-envelope"></i> shailendra.shyamsukha@gmail.com </a>
                     <br>
                     
                     <a class="" href="https://www.linkedin.com/in/shailendra-shyamsukha/" target="_blank"><i class="fa-brands fa-linkedin"></i> LinkedIn </a>
@@ -101,6 +104,9 @@
                             <div class="item">
                                 <p><span><img src="images/icons/allied-services.png" alt="Allied Services"></span>Allied Services</p>
                             </div>
+                            <div class="item">
+                                <p><span><img src="images/icons/brand-architecture.png" alt="Brand Architecture"></span>Brand Architecture</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,8 +122,13 @@
                     <div class="abouttext">
                         <div class="aboutdescription">
                             <div class="twocol">
-                                <p>Having successfully completed my Masters at The University of Manchester, I embarked on an exciting journey into the Brand & Marketing World as a Brand Strategy Manager at R K Swamy. With over a decade of experience under my belt, I've honed my skills in executing product campaigns, managing P&L, digital channels, and offline business, specializing in building strong and recognizable brands. My expertise encompasses branding, performance marketing, social media, market research, strategic planning, creative development, and CRM retention, all aimed at effectively communicating brand messages and achieving business goals. I'm honoured to have been distinguished as one of India's top 30 e-commerce leaders, surpassing 500 other accomplished professionals in the field.</p>
-                    <p>My unwavering drive to help more brands establish their presence has led me to embrace the consultancy route. When I'm not busy building brands, I enjoy indulging in my passion for collecting sneakers, immersing myself in understanding the language of my toddler, and exploring the dynamic city of Bangalore, my new home. Always on the lookout for new challenges and opportunities to make a meaningful impact, I'm committed to creating brand stories that captivate audiences and drive success.</p>                    
+                                <div class="col-1">
+                                    <img src="images/photo-shailendra.jpg" alt="Shailendra Shyamsukha" />
+                                </div>
+                                <div class="col-1">
+                                    <p>Having successfully completed my Masters at The University of Manchester, I embarked on an exciting journey into the Brand & Marketing World as a Brand Strategy Manager at R K Swamy. With over a decade of experience under my belt, I've honed my skills in executing product campaigns, managing P&L, digital channels, and offline business, specializing in building strong and recognizable brands. My expertise encompasses branding, performance marketing, social media, market research, strategic planning, creative development, and CRM retention, all aimed at effectively communicating brand messages and achieving business goals. I'm honoured to have been distinguished as one of India's top 30 e-commerce leaders, surpassing 500 other accomplished professionals in the field.</p>
+                    <p>My unwavering drive to help more brands establish their presence has led me to embrace the consultancy route. When I'm not busy building brands, I enjoy indulging in my passion for collecting sneakers, immersing myself in understanding the language of my toddler, and exploring the dynamic city of Bangalore, my new home. Always on the lookout for new challenges and opportunities to make a meaningful impact, I'm committed to creating brand stories that captivate audiences and drive success.</p>    
+                                </div>        
                             </div>
                         </div>
                     </div>
