--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="centerall">
                     <div class="container">
                         <h1 class="intro-title"><span>Branding</span> <span>And</span> <span>Strategy</span> <span class="hidden-xs"><br/></span> <span>Including</span> <span>Creative</span> <span>Solutions</span></h1>
-                        <span class="border-small"></span>
-                        <p class="tagline">A service that aims to help brands maximize impact <span class="hidden-xs"><br/></span> & build true loyalty with expertise</p>
+                        <span class="border-small" style="width: 0;"></span>
+                        <p class="tagline" style="opacity: 0;">A service that aims to help brands maximize impact <span class="hidden-xs"><br/></span> & build true loyalty with expertise</p>
                     </div>
                 </div>
             </div>
