--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <section id="intro" class="yellowbg fullheight">
             <div class="heading">
-                <h2>Introducing BASICS</h2>
+                <h2>Introducing</h2>
             </div>
             <div class="content text-center">
                 <div class="centerall">
