--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <section id="home" class="top tealbg fullheight">
-            <div class="typewrite" data-period="2000" data-type='[ "Is your brand struggling to stand out in the competitive market?", "Need a key to unlock your brands potential?", "Maximise Brand impact & build true loyalty with expertise" ]'>
+            <div class="typewrite" data-period="2000" data-type='[ "Is your brand struggling to stand out in the competitive market?", "Need a key to unlock your brands potential?", "Maximise brand impact & build true loyalty with expertise" ]'>
                 <span class="wrap"></span>
             </div>
 
